Updated property file

--- a/kilkariobd/src/main/resources/kilkariobd.properties
+++ b/kilkariobd/src/main/resources/kilkariobd.properties
@@ -6,7 +6,7 @@ offlineApiRetryMultiplier = 2
 # OBD preparation and scp parameters
 obdFileLocalPath = /tmp
 sshPrivateKeyFile = ${sys:user.home}/.ssh/id_rsa
-sshLocalUsername = username
+sshLocalUsername = ${sys:user.name}
 
 
 
